# checkpoint9

./: README.md
attach_shelf/: CMakeLists.txt  package.xml
attach_shelf/launch/: attach_to_shelf.launch.py  pre_approach.launch.xml
attach_shelf/rviz/: config.rviz
attach_shelf/src/: approach_service_server.cpp  pre_approach.cpp  pre_approach_v2.cpp
my_components/: CMakeLists.txt  README.md  package.xml
my_components/include/my_components/: attach_client_component.hpp  attach_server_component.hpp  pre_approach_component.hpp  visibility_control.h
my_components/launch/: attach_to_shelf.launch.py  pre_approach_component.launch.py
my_components/src/: attach_client_component.cpp  attach_server_component.cpp  pre_approach_component.cpp
